--- a/README.Rmd
+++ b/README.Rmd
@@ -32,7 +32,7 @@ remotes::install_github("malcolmbarrett/au.rcourse")
 au.rcourse::use_module("module_name")
 ```
 
-By default, this package downloads the materials to a conspicous place like your Desktop. You can also tell `use_module()` exactly where to put the materials with `destdir`:
+By default, this package downloads the materials to a conspicuous place like your Desktop. You can also tell `use_module()` exactly where to put the materials with `destdir`:
 
 ``` r
 au.rcourse::use_module("module_name", destdir = "a/path/on/your/computer")
